services/product-catalogue-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalogue-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalogue-service
  template:
    metadata:
      labels:
        app: product-catalogue-service
    spec:
      containers:
        - name: cos-product-catalogue-service-test
          image: cos-product-catalogue-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
