services/product-catalogue-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue-service-service
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: product-catalogue-service
